--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,18 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/sizeAllMatchParent"
     tools:context=".ui.main.MainActivity">
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/sizeAllMatchParent"
         android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            style="@style/sizeAllMatchParent">
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/app_bar_title"
@@ -27,14 +24,12 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    style="@style/sizeAllMatchParent"
                     android:paddingHorizontal="@dimen/normal_100">
 
                     <TextView
                         android:id="@+id/tv_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/sizeAllWrapContent"
                         android:fontFamily="sans-serif-medium"
                         android:text="@string/github_users"
                         android:textColor="@color/white"
@@ -43,13 +38,13 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/img_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/sizeAllWrapContent"
                         android:contentDescription="@string/back"
                         android:src="@drawable/ic_back"
                         android:visibility="gone"
+                        android:background="@android:color/transparent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -61,7 +56,8 @@
                         app:hintEnabled="false"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_back"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/img_clear">
 
                         <EditText
                             android:id="@+id/edt_search_main"
@@ -73,31 +69,30 @@
                             android:hint="@string/search"
                             android:imeOptions="actionSearch"
                             android:inputType="text"
-                            android:paddingStart="@dimen/normal_100"
-                            android:paddingEnd="@dimen/normal_100"
+                            android:paddingHorizontal="@dimen/normal_100"
                             android:textColor="@color/white"
                             android:textColorHint="@color/colorPrimaryDark"
                             android:visibility="gone" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/img_search"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/sizeAllWrapContent"
                         android:contentDescription="@string/search"
                         android:src="@drawable/ic_search"
+                        android:background="@android:color/transparent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/img_clear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/sizeAllWrapContent"
                         android:contentDescription="@string/clear"
                         android:src="@drawable/ic_close"
                         android:visibility="gone"
+                        android:background="@android:color/transparent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -122,6 +117,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
