--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/sizeAllMatchParent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.splash.SplashActivity">
 
@@ -18,8 +17,7 @@
 
     <TextView
         android:id="@+id/text_view_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/sizeAllWrapContent"
         android:text="@string/github_users"
         android:textSize="@dimen/h5"
         android:textColor="@color/colorPrimary"
